Added alot of spaces as they make the book way more readable

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -164,24 +164,24 @@
   "book.forgero.guidebook.tooltip": "A Guide to Modular Mayhem",
   "book.forgero.guidebook.category.landing.name": "About",
   "book.forgero.guidebook.landing.about_this_mod.name": "About Us",
-  "book.forgero.guidebook.landing.about_this_mod.text": "The Artifica aims to help you on your playthrough with Forgero. It gives you the basics to create your own tool, use & create schematics and gives you insights in how to upgrade/modify your tool. Keep in mind everything is WIP.",
+  "book.forgero.guidebook.landing.about_this_mod.text": "The Artifica aims to help you on your playthrough with Forgero. It gives you the basics to create your first tool, create schematics and use them. After that it also gives some info on how to upgrade/modify your tool. \n\\\n\\\n[#](FF0000)*Everything is WIP*[#]()",
   "book.forgero.guidebook.landing.about_this_mod.title": "About",
   "book.forgero.guidebook.landing.about_this_mod.text1": "If you run into trouble, find bugs, wanna help develop or just want to ask some questions, please join our [Discord!](https://discord.gg/3vK7ZwEDex)",
   "book.forgero.guidebook.landing.about_this_mod.title1": "Discord",
   "book.forgero.guidebook.category.getting_started.name": "Getting started",
   "book.forgero.guidebook.getting_started.intro.name": "World of Forgero",
-  "book.forgero.guidebook.getting_started.intro.text": "Hello Future Blacksmith! The world of Forgero is one of exploration, gathering and crafting. Where actually collecting every material is usefull.",
-  "book.forgero.guidebook.getting_started.intro.text1": "The learning curve of Forgero is pretty steep as you don't become a master blacksmith in a day. \n\\\n\\\n[#](FF0000)*Please follow this handbook closely and keep it on you at all times.*[#]()",
+  "book.forgero.guidebook.getting_started.intro.text": "Hello Future Blacksmith! The world of Forgero is one of exploration, gathering and crafting. \n\\\n\\\nWhere actually collecting every material has a purpose!",
+  "book.forgero.guidebook.getting_started.intro.text1": "The learning curve of Forgero is pretty steep as you don't master something in a day. \n\\\n\\\n[#](FF0000)*Please follow this handbook closely and keep it on you at all times.*[#]()",
   "book.forgero.guidebook.getting_started.intro.title": "World of Forgero",
   "book.forgero.guidebook.getting_started.intro.title1": "Learning Curve",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.name": "Crafting Your First Tool!",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.description": "It's time to get started",
-  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text" : "You want to create your first wooden tool. Just like in vanilla Forgero's wooden tools can be crafted with wood. No need for anything fancy (yet).",
+  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text" : "You want to create your first wooden tool. Just like in vanilla Forgero's wooden tools can be crafted with wood. \n\\\n\\\nNo need for anything fancy (yet).",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.title": "Your First Tool",
-  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text1" : "Forgero's tools always consist of (atleast) two different parts. A [#](00F3FF)Handle[#]() and a [#](5100FF)Toolhead[#]() or a [#](5100FF)Swordblade[#]().",
+  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text1" : "Forgero's tools always consist of (atleast) two parts. A [#](00F3FF)Handle[#]() and a [#](5100FF)Toolhead[#]() or a [#](5100FF)Swordblade[#]().",
   "book.forgero.guidebook.getting_started.handle.name": "Crafting your first handle!",
   "book.forgero.guidebook.getting_started.handle.description": "Getting a handle on things",
-  "book.forgero.guidebook.getting_started.handle.text": "A [#](00F3FF)Handle[#]() is needed to give your player something to hold on. Instead of bare handing a pickaxehead.",
+  "book.forgero.guidebook.getting_started.handle.text": "A [#](00F3FF)Handle[#]() is needed to give your player something to hold on. \n\\\n\\\nSo stop barehanding that pickaxe!",
   "book.forgero.guidebook.getting_started.handle.title": "Your First Handle",
   "book.forgero.guidebook.getting_started.head.name": "Crafting your first toolhead!",
   "book.forgero.guidebook.getting_started.head.description": "Getting further a-head",
@@ -189,9 +189,9 @@
   "book.forgero.guidebook.getting_started.head.title": "Your First Toolhead",
   "book.forgero.guidebook.getting_started.your_first_tool.name": "Your First Tool!",
   "book.forgero.guidebook.getting_started.your_first_tool.description": "Putting the pieces together",
-  "book.forgero.guidebook.getting_started.your_first_tool.text": "Now we have the parts we needed to craft your first Forgero pickaxe! Hurry, Hurry now. Nobody likes wooden tools right? ",
+  "book.forgero.guidebook.getting_started.your_first_tool.text": "Now we have the parts we needed to craft your first Forgero pickaxe! \n\\\n\\\nHurry, Hurry now. Nobody likes wooden tools right? ",
   "book.forgero.guidebook.getting_started.your_first_tool.title": "Your First Tool",
-  "book.forgero.guidebook.getting_started.your_first_tool.text1": "Here is a small reminder for the crafting recipe. Now you will never forget it! (right?)",
+  "book.forgero.guidebook.getting_started.your_first_tool.text1": "Here is a small reminder for the crafting recipe. \n\\\n\\\nNow you will never forget it! (right?)",
   "book.forgero.guidebook.getting_started.shortcut.name": "Onto Schematics!",
   "book.forgero.guidebook.getting_started.shortcut.description": "Stone age & Beyond",
   "book.forgero.guidebook.category.schematics.name": "Schematics & Co",
@@ -199,7 +199,7 @@
   "book.forgero.guidebook.schematics.back_to_crafting.description": "Already forgot again?",
   "book.forgero.guidebook.schematics.schematics.name": "Schematics",
   "book.forgero.guidebook.schematics.schematics.description": "A different approach",
-  "book.forgero.guidebook.schematics.schematics.text": "Getting stone tools is a bit different than wooden ones. You will need [#](78FF00)schematics[#](). Luckily the base ones can be crafted pretty easily. You can create new wooden parts and use these or use the [#](7C00FF)[Disassembly Station](entry://schematics/disassembly_station)[#]().",
+  "book.forgero.guidebook.schematics.schematics.text": "Getting stone tools is a bit different than wooden ones. You will need [#](78FF00)schematics[#](). Luckily the base ones can be crafted pretty easily. \n\\\n\\\nCreate new wooden parts or use the [#](7C00FF)[Disassembly Station](entry://schematics/disassembly_station)[#]().",
   "book.forgero.guidebook.schematics.schematics.title": "Schematics",
   "book.forgero.guidebook.schematics.using_your_schematics.name": "Using Your Schematics",
   "book.forgero.guidebook.schematics.using_your_schematics.description": "Time for an upgrade",
@@ -208,7 +208,7 @@
   "book.forgero.guidebook.schematics.disassembly_station.name": "Using the Disassembly Station",
   "book.forgero.guidebook.schematics.disassembly_station.description": "Breaking it down",
   "book.forgero.guidebook.schematics.disassembly_station.title": "The Disassembly Station",
-  "book.forgero.guidebook.schematics.disassembly_station.text": "The [#](7C00FF)Disassembly Station[#]() lets you disassemble your [#](000CFF)tools[#](). This makes it possible to get back used materials or parts. No need to discard those old [#](000CFF)tools[#]()!",
+  "book.forgero.guidebook.schematics.disassembly_station.text": "The [#](7C00FF)Disassembly Station[#]() lets you disassemble your [#](000CFF)tools[#](). This makes it possible to get back used materials or parts.\n\\\n\\\nSo no need to discard those old [#](000CFF)tools[#]()!",
   "book.forgero.guidebook.schematics.disassembly_station.title2": "Actually using it",
   "book.forgero.guidebook.schematics.disassembly_station.text2": "To use it you put in a [#](000CFF)tool[#]() on the left side. On the right side it will show what you get back.\n\\\n\\\n[#](FF0000)*Keep in mind that not all the materials are given back.*[#]()\n",
   "book.forgero.guidebook.schematics.schematic_variants.name": "Different Schematics",
@@ -220,29 +220,29 @@
   "book.forgero.guidebook.schematics.refined_schematics.name": "Refined Schematics",
   "book.forgero.guidebook.schematics.refined_schematics.description": "Better Tools!",
   "book.forgero.guidebook.schematics.refined_schematics.title": "Refined Schematics",
-  "book.forgero.guidebook.schematics.refined_schematics.text": "[#](78FF00)Refined schematics[#]() are a upgrade over the normal [#](78FF00)schematics[#](). These [#](78FF00)schematics[#]() don't have special abilities but are just straight up stat upgrades. ",
+  "book.forgero.guidebook.schematics.refined_schematics.text": "[#](78FF00)Refined schematics[#]() are a upgrade over the normal [#](78FF00)schematics[#](). \n\\\n\\\nThese [#](78FF00)schematics[#]() don't have special abilities but are just straight up stat upgrades. ",
   "book.forgero.guidebook.schematics.refined_schematics.title1": "How to get them",
-  "book.forgero.guidebook.schematics.refined_schematics.text1": "You can find these [#](78FF00)schematics[#]() by exploring the world. Destroy villages and villagers, free bastions, kill pillagers or by being boring a trading your way up.",
+  "book.forgero.guidebook.schematics.refined_schematics.text1": "You can find these [#](78FF00)schematics[#]() by exploring the world. Destroy villages and villagers, free bastions, kill pillagers or by being boring and trading your way up.",
   "book.forgero.guidebook.schematics.extended_schematics.name": "Extended Schematics",
   "book.forgero.guidebook.schematics.extended_schematics.description": "Extended = Unique",
   "book.forgero.guidebook.schematics.extended_schematics.title": "Extended Schematics",
-  "book.forgero.guidebook.schematics.extended_schematics.text": "[#](78FF00)Extended schematics[#]() push the boundaries of fantasy and functionality. [#](000CFF)Tools[#]() created with these [#](78FF00)schematics[#]() have abilities that are often explained in the tooltip. ",
+  "book.forgero.guidebook.schematics.extended_schematics.text": "[#](78FF00)Extended schematics[#]() push the boundaries of fantasy and functionality.\n\\\n\\\n[#](000CFF)Tools[#]() created with these [#](78FF00)schematics[#]() have abilities that are often explained in the tooltip. ",
   "book.forgero.guidebook.schematics.extended_schematics.title1": "Examples",
   "book.forgero.guidebook.schematics.extended_schematics.text1": "Examples of these abilties are vein mining, throwing, getting boosts during nighttime or by being in another dimension etc. The others are for you to discover.",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.name": "Mastercrafted Schematics",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.description": "Even Better Better Tools!",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title": "Mastercrafted Schematics",
-  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](78FF00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](78FF00)schematics[#](). Just like the refined ones these are a straight up stat boost, but also feature more [#](FF00C5)slots[#]().",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](78FF00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](78FF00)schematics[#](). \n\\\n\\\nJust like the refined ones these are a straight up stat boost, but also feature more [#](FF00C5)slots[#]().",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title1": "Good luck searching",
-  "book.forgero.guidebook.schematics.mastercrafted_schematics.text1": "Just like all the other [#](78FF00)schematics[#]() you can find these by exploring the world. These [#](78FF00)schematics[#]() are the most rare of them all. Some blacksmiths never even see these in their lifetime.",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.text1": "Just like all the other [#](78FF00)schematics[#]() you can find these by exploring the world. \n\\\n\\\nThese [#](78FF00)schematics[#]() are the most rare of them all. Some blacksmiths never even see these in their lifetime.",
   "book.forgero.guidebook.schematics.shortcut.name": "Customization is key",
   "book.forgero.guidebook.schematics.shortcut.description": "Finally I can dye my tools pink!",
   "book.forgero.guidebook.category.upgrading.name": "Customization & Upgrades",
   "book.forgero.guidebook.upgrading.upgrade_station.name": "From Pickaxe To Powerhouse",
   "book.forgero.guidebook.upgrading.upgrade_station.description": "The Upgrade Station and you",
-  "book.forgero.guidebook.upgrading.upgrade_station.text": "Customizing your tool is all done with the [#](7C00FF)Upgrade Station[#](). The [#](7C00FF)Upgrade Station[#]() allows you to hotswap materials and certain parts in and out of your [#](000CFF)tools[#]().",
+  "book.forgero.guidebook.upgrading.upgrade_station.text": "Customizing your tool is all done with the [#](7C00FF)Upgrade Station[#](). \n\\\n\\\nThe [#](7C00FF)Upgrade Station[#]() allows you to hotswap materials and certain parts in and out of your [#](000CFF)tools[#]().",
   "book.forgero.guidebook.upgrading.upgrade_station.title": "Upgrade Station",
-  "book.forgero.guidebook.upgrading.upgrade_station.text1": "The [#](7C00FF)Upgrade Station[#]() is the only way to acces all the [#](FF00C5)slots[#]() on a [#](000CFF)tool[#](). Thus being necessary if you want to dye or alter your [#](000CFF)tools[#]().",
+  "book.forgero.guidebook.upgrading.upgrade_station.text1": "The [#](7C00FF)Upgrade Station[#]() is the only way to acces all the [#](FF00C5)slots[#]() on a [#](000CFF)tool[#](). \n\\\n\\\nThus being necessary if you want to dye or alter your [#](000CFF)tools[#]().",
   "book.forgero.guidebook.upgrading.upgrade_station.title1": "Slots",
   "book.forgero.guidebook.upgrading.stats.name": "Stats And What They Mean",
   "book.forgero.guidebook.upgrading.stats.description": "A mystery unraveled",
@@ -252,12 +252,12 @@
   "book.forgero.guidebook.upgrading.weight.name": "Weight On Tools And Materials",
   "book.forgero.guidebook.upgrading.weight.description": "Featherweight",
   "book.forgero.guidebook.upgrading.weight.title": "Weight & Attack Speed",
-  "book.forgero.guidebook.upgrading.weight.text": "Weight and Attack speed are a bit of a outlier if you look at the stats. As base every material in Forgero has 2 attack speed, the weight on the material then decides how much there is taken off.",
+  "book.forgero.guidebook.upgrading.weight.text": "Weight and Attack speed are a bit of a outlier if you look at the stats. \n\\\n\\\nAs base every material in Forgero has 2 attack speed, the weight on the material then decides how much there is taken off.",
   "book.forgero.guidebook.upgrading.weight.title1": "Hunger",
-  "book.forgero.guidebook.upgrading.weight.text1": "Next to attack speed weight also has a impact on your hunger bar. How heavier the tool how more you have to eat to get replenished.",
+  "book.forgero.guidebook.upgrading.weight.text1": "Next to attack speed weight also has a impact on your hunger bar. \n\\\n\\\nHow heavier the tool how more you have to eat to get replenished.",
   "book.forgero.guidebook.upgrading.slots.name": "Tools And Their Slots",
   "book.forgero.guidebook.upgrading.slots.description": "You can always have more",
-  "book.forgero.guidebook.upgrading.slots.text": "[#](000CFF)Tools[#]() have different [#](FF00C5)slots[#](). Which have all their own benefit. Not all materials are viable in every slot. Think about it, would it make sense to add vines to the tip of your sword?",
+  "book.forgero.guidebook.upgrading.slots.text": "[#](000CFF)Tools[#]() have different [#](FF00C5)slots[#](). Which have all their own benefit. Not all materials are viable in every slot. \n\\\n\\\nThink about it, would it make sense to add vines to the tip of your sword?",
   "book.forgero.guidebook.upgrading.slots.title": "Slots on Tools",
   "book.forgero.guidebook.upgrading.slots.text1": "We categorize the [#](FF00C5)slots[#]() into three main ones.\n\\\n\\\nSo we have Utility, Offensive and Trinket [#](FF00C5)slots[#]().\n",
   "book.forgero.guidebook.upgrading.slots.title1": "Different Slots",
@@ -287,9 +287,9 @@
   "book.forgero.guidebook.upgrading.trinket.title": "Trinkets",
   "book.forgero.guidebook.upgrading.gems.name": "Gems",
   "book.forgero.guidebook.upgrading.gems.description": "Not just for decoration",
-  "book.forgero.guidebook.upgrading.gems.text": "Gems add base stats to a [#](000CFF)tool[#](). For every base stat there is one gem that amplifies it. Gems are based on minerals, so for example diamond gem or a lapis lazuli gem.",
+  "book.forgero.guidebook.upgrading.gems.text": "Gems add base stats to a [#](000CFF)tool[#](). For every base stat there is one gem that amplifies it. \n\\\n\\\nGems are based on minerals, so for example diamond gem or a lapis lazuli gem.",
   "book.forgero.guidebook.upgrading.gems.title": "Gems",
-  "book.forgero.guidebook.upgrading.gems.text1": "Gems can be found while mining their respective ore. Upgrading them after also requires unique materials. Gems can be upgraded to level 5. ",
+  "book.forgero.guidebook.upgrading.gems.text1": "Gems can be found while mining their respective ore. \n\\\n\\\nGems can be upgraded to level 5. Each level increases the bonus amount. Each level requires some unique items.",
   "book.forgero.guidebook.upgrading.gems.title1": "Where to find these",
   "book.forgero.guidebook.upgrading.offensive.name": "Offensive Slots",
   "book.forgero.guidebook.upgrading.offensive.description": "Harder, better, faster, stronger",
