Changed colors around & Added some text on second pages

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -170,26 +170,28 @@
   "book.forgero.guidebook.landing.about_this_mod.title1": "Discord",
   "book.forgero.guidebook.category.getting_started.name": "Getting started",
   "book.forgero.guidebook.getting_started.intro.name": "World of Forgero",
-  "book.forgero.guidebook.getting_started.intro.text": "Hello Future Blacksmith! The world of Forgero is one of exploration, gathering and crafting. \n\\\n\\\nWhere actually collecting every material has a purpose!",
-  "book.forgero.guidebook.getting_started.intro.text1": "The learning curve of Forgero is pretty steep as you don't master something in a day. \n\\\n\\\n[#](FF0000)*Please follow this handbook closely and keep it on you at all times.*[#]()",
+  "book.forgero.guidebook.getting_started.intro.text": "Hello Future Blacksmith! The world of Forgero is one of exploration, gathering and crafting. \n\\\n\\\nIn this world actually collecting every material has a purpose!",
+  "book.forgero.guidebook.getting_started.intro.text1": "The basics of Forgero are not the same as normal minecraft. To get started the Artifica is essential. \n\\\n\\\n[#](FF0000)*Please follow this handbook closely and keep it on you at all times.*[#]()",
   "book.forgero.guidebook.getting_started.intro.title": "World of Forgero",
-  "book.forgero.guidebook.getting_started.intro.title1": "Learning Curve",
+  "book.forgero.guidebook.getting_started.intro.title1": "The basics",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.name": "Crafting Your First Tool!",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.description": "It's time to get started",
-  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text" : "You want to create your first wooden tool. Just like in vanilla Forgero's wooden tools can be crafted with wood. \n\\\n\\\nNo need for anything fancy (yet).",
+  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text" : "You want to create your first tool. Just like in vanilla Forgero's wooden tools can be crafted with (ofcourse) wood. \n\\\n\\\nNo need for anything fancy (yet).",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.title": "Your First Tool",
-  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text1" : "Forgero's tools always consist of (atleast) two parts. A [#](00F3FF)Handle[#]() and a [#](5100FF)Toolhead[#]() or a [#](5100FF)Swordblade[#]().",
+  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text1" : "Forgero's tools always consist of (atleast) two parts. A [#](04bcb6)Handle[#]() and a [#](5100FF)Toolhead[#]() or a [#](5100FF)Swordblade[#]().",
   "book.forgero.guidebook.getting_started.handle.name": "Crafting your first handle!",
   "book.forgero.guidebook.getting_started.handle.description": "Getting a handle on things",
-  "book.forgero.guidebook.getting_started.handle.text": "A [#](00F3FF)Handle[#]() is needed to give your player something to hold on. \n\\\n\\\nSo stop barehanding that pickaxe!",
+  "book.forgero.guidebook.getting_started.handle.text": "A [#](04bcb6)Handle[#]() is needed to give your player something to hold on.  \n\\\n\\\nHandles in Forgero can be upgraded later on.",
   "book.forgero.guidebook.getting_started.handle.title": "Your First Handle",
   "book.forgero.guidebook.getting_started.head.name": "Crafting your first toolhead!",
   "book.forgero.guidebook.getting_started.head.description": "Getting further a-head",
   "book.forgero.guidebook.getting_started.head.text": "The type of [#](5100FF)Toolhead[#]() you use decides which tool it is gonna be. \n\\\n\\\nSo a axehead makes a axe, and a pickaxehead a pickaxe.",
   "book.forgero.guidebook.getting_started.head.title": "Your First Toolhead",
+  "book.forgero.guidebook.getting_started.head.text1": "Pretty simple right?",
+  "book.forgero.guidebook.getting_started.handle.text1": "So stop barehanding that pickaxe!",
   "book.forgero.guidebook.getting_started.your_first_tool.name": "Your First Tool!",
   "book.forgero.guidebook.getting_started.your_first_tool.description": "Putting the pieces together",
-  "book.forgero.guidebook.getting_started.your_first_tool.text": "Now we have the parts we needed to craft your first Forgero pickaxe! \n\\\n\\\nHurry, Hurry now. Nobody likes wooden tools right? ",
+  "book.forgero.guidebook.getting_started.your_first_tool.text": "Now we have the parts we needed to craft your first Forgero tool! \n\\\n\\\nHurry, Hurry now. Nobody likes wooden tools right?",
   "book.forgero.guidebook.getting_started.your_first_tool.title": "Your First Tool",
   "book.forgero.guidebook.getting_started.your_first_tool.text1": "Here is a small reminder for the crafting recipe. \n\\\n\\\nNow you will never forget it! (right?)",
   "book.forgero.guidebook.getting_started.shortcut.name": "Onto Schematics!",
@@ -199,12 +201,12 @@
   "book.forgero.guidebook.schematics.back_to_crafting.description": "Already forgot again?",
   "book.forgero.guidebook.schematics.schematics.name": "Schematics",
   "book.forgero.guidebook.schematics.schematics.description": "A different approach",
-  "book.forgero.guidebook.schematics.schematics.text": "Getting stone tools is a bit different than wooden ones. You will need [#](78FF00)schematics[#](). Luckily the base ones can be crafted pretty easily. \n\\\n\\\nCreate new wooden parts or use the [#](7C00FF)[Disassembly Station](entry://schematics/disassembly_station)[#]().",
+  "book.forgero.guidebook.schematics.schematics.text": "Getting stone tools is a bit different than wooden ones. You will need [#](37bf00)schematics[#](). Luckily the base ones can be crafted pretty easily. \n\\\n\\\nCreate new wooden parts or use the [#](7C00FF)[Disassembly Station](entry://schematics/disassembly_station)[#]().",
   "book.forgero.guidebook.schematics.schematics.title": "Schematics",
   "book.forgero.guidebook.schematics.using_your_schematics.name": "Using Your Schematics",
   "book.forgero.guidebook.schematics.using_your_schematics.description": "Time for an upgrade",
   "book.forgero.guidebook.schematics.using_your_schematics.title": "Using Them",
-  "book.forgero.guidebook.schematics.using_your_schematics.text": "If u followed the process until now you should have some [#](78FF00)schematics[#]().\n\\\n\\\nOnly thing left is to find the material you wanna use!\n",
+  "book.forgero.guidebook.schematics.using_your_schematics.text": "If u followed the process until now you should have some [#](37bf00)schematics[#]().\n\\\n\\\nOnly thing left is to find the material you wanna use!\n",
   "book.forgero.guidebook.schematics.disassembly_station.name": "Using the Disassembly Station",
   "book.forgero.guidebook.schematics.disassembly_station.description": "Breaking it down",
   "book.forgero.guidebook.schematics.disassembly_station.title": "The Disassembly Station",
@@ -213,28 +215,28 @@
   "book.forgero.guidebook.schematics.disassembly_station.text2": "To use it you put in a [#](000CFF)tool[#]() on the left side. On the right side it will show what you get back.\n\\\n\\\n[#](FF0000)*Keep in mind that not all the materials are given back.*[#]()\n",
   "book.forgero.guidebook.schematics.schematic_variants.name": "Different Schematics",
   "book.forgero.guidebook.schematics.schematic_variants.description": "But wait, there's more",
-  "book.forgero.guidebook.schematics.schematic_variants.text": "The [#](78FF00)base schematics[#]() that you can craft yourself replicate minecraft's vanilla tools.\n\\\n\\\nAs the name suggest [#](78FF00)base schematics[#]() don't give your tools more stats or more [#](FF00C5)slots[#]()\n",
+  "book.forgero.guidebook.schematics.schematic_variants.text": "The [#](37bf00)base schematics[#]() that you can craft yourself replicate minecraft's vanilla tools.\n\\\n\\\nAs the name suggest [#](37bf00)base schematics[#]() don't give your tools more stats or more [#](FF00C5)slots[#]()\n",
   "book.forgero.guidebook.schematics.schematic_variants.title": "Base Schematics",
-  "book.forgero.guidebook.schematics.schematic_variants.text1": "There are more [#](78FF00)schematics[#]() than just the base one. Higher tier [#](78FF00)schematics[#]() have stat boosts or special abilities like vein mining. These [#](78FF00)schematics[#]() cannot be crafted.",
+  "book.forgero.guidebook.schematics.schematic_variants.text1": "There are more [#](37bf00)schematics[#]() than just the base one. Higher tier [#](37bf00)schematics[#]() have stat boosts or special abilities like vein mining. These [#](37bf00)schematics[#]() cannot be crafted.",
   "book.forgero.guidebook.schematics.schematic_variants.title1": "There Are More",
   "book.forgero.guidebook.schematics.refined_schematics.name": "Refined Schematics",
   "book.forgero.guidebook.schematics.refined_schematics.description": "Better Tools!",
   "book.forgero.guidebook.schematics.refined_schematics.title": "Refined Schematics",
-  "book.forgero.guidebook.schematics.refined_schematics.text": "[#](78FF00)Refined schematics[#]() are a upgrade over the normal [#](78FF00)schematics[#](). \n\\\n\\\nThese [#](78FF00)schematics[#]() don't have special abilities but are just straight up stat upgrades. ",
+  "book.forgero.guidebook.schematics.refined_schematics.text": "[#](37bf00)Refined schematics[#]() are a upgrade over the normal [#](37bf00)schematics[#](). \n\\\n\\\nThese [#](37bf00)schematics[#]() don't have special abilities but are just straight up stat upgrades. ",
   "book.forgero.guidebook.schematics.refined_schematics.title1": "How to get them",
-  "book.forgero.guidebook.schematics.refined_schematics.text1": "You can find these [#](78FF00)schematics[#]() by exploring the world. Destroy villages and villagers, free bastions, kill pillagers or by being boring and trading your way up.",
+  "book.forgero.guidebook.schematics.refined_schematics.text1": "You can find these [#](37bf00)schematics[#]() by exploring the world. Destroy villages and villagers, free bastions, kill pillagers or by being boring and trading your way up.",
   "book.forgero.guidebook.schematics.extended_schematics.name": "Extended Schematics",
   "book.forgero.guidebook.schematics.extended_schematics.description": "Extended = Unique",
   "book.forgero.guidebook.schematics.extended_schematics.title": "Extended Schematics",
-  "book.forgero.guidebook.schematics.extended_schematics.text": "[#](78FF00)Extended schematics[#]() push the boundaries of fantasy and functionality.\n\\\n\\\n[#](000CFF)Tools[#]() created with these [#](78FF00)schematics[#]() have abilities that are often explained in the tooltip. ",
-  "book.forgero.guidebook.schematics.extended_schematics.title1": "Examples",
-  "book.forgero.guidebook.schematics.extended_schematics.text1": "Examples of these abilties are vein mining, throwing, getting boosts during nighttime or by being in another dimension etc. The others are for you to discover.",
+  "book.forgero.guidebook.schematics.extended_schematics.text": "[#](37bf00)Extended schematics[#]() push the boundaries of fantasy and functionality.\n\\\n\\\n[#](000CFF)Tools[#]() created with these [#](37bf00)schematics[#]() have abilities that are often explained in the tooltip. ",
+  "book.forgero.guidebook.schematics.extended_schematics.title1": "How to get them",
+  "book.forgero.guidebook.schematics.extended_schematics.text1": "[#](37bf00)Extended schematics[#]() can be found by exploring different locations, trading with a traveling villager or found by killing pillagers.",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.name": "Mastercrafted Schematics",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.description": "Even Better Better Tools!",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title": "Mastercrafted Schematics",
-  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](78FF00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](78FF00)schematics[#](). \n\\\n\\\nJust like the refined ones these are a straight up stat boost, but also feature more [#](FF00C5)slots[#]().",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](37bf00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](37bf00)schematics[#](). \n\\\n\\\nJust like the refined ones these are a straight up stat boost, but also feature more [#](FF00C5)slots[#]().",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title1": "Good luck searching",
-  "book.forgero.guidebook.schematics.mastercrafted_schematics.text1": "Just like all the other [#](78FF00)schematics[#]() you can find these by exploring the world. \n\\\n\\\nThese [#](78FF00)schematics[#]() are the most rare of them all. Some blacksmiths never even see these in their lifetime.",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.text1": "Just like all the other [#](37bf00)schematics[#]() you can find these by exploring the world. \n\\\n\\\nThese [#](37bf00)schematics[#]() are the most rare of them all. Some blacksmiths never even see these in their lifetime.",
   "book.forgero.guidebook.schematics.shortcut.name": "Customization is key",
   "book.forgero.guidebook.schematics.shortcut.description": "Finally I can dye my tools pink!",
   "book.forgero.guidebook.category.upgrading.name": "Customization & Upgrades",
