--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -243,5 +243,11 @@
   "item.forgero.netherite_gold_ingot": "Netherite-Gold Ingot",
   "item.forgero.netherite_emerald_ingot": "Netherite-Emerald Ingot",
   "item.forgero.netherite_diamond_ingot": "Netherite-Diamond Ingot",
-  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot"
+  "item.forgero.netherite_iron_ingot": "Netherite-Iron Ingot",
+  "item.forgero.travertin": "Travertin",
+  "item.forgero.laterit": "Laterit",
+  "item.forgero.swamp_oak": "Swamp Oak",
+  "item.forgero.swamp_cypress": "Swamp Cypress",
+  "item.forgero.fan_palm": "Fan Palm",
+  "item.forgero.chestnut": "Chestnut"
 }
